# brick_inventory

./: .gitignore  Cargo.toml
data/rebrickable/: README.md
migrations/2021-08-09-054644_create_initial_brick_schema/: up2.sql
src/: api_v1.rs  main.rs  rebrickable.rs  schema.rs
ui/: index.html  package.json
ui/src/: brick_store.ts
