[package]
name = "brick_inventory"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
schemars = { version = "0.8"}
okapi= { version = "0.6.0-alpha-1", git = "https://github.com/TotalKrill/okapi", features = ["derive_json_schema"], package = "okapi_fork" }
rocket_okapi= { version = "0.7.0-alpha-1", git = "https://github.com/TotalKrill/okapi.git", package = "rocket_okapi_fork"}
serde = "1.0"
